# raytracer

./: Cargo.toml
src/: bvh.rs  camera.rs  color.rs  compute.rs  gpu_types.rs  importer.rs  main.rs  material.rs  model.rs  movement.rs  objects.rs  profiler.rs  ray.rs  renderer.rs  scene.rs  todo.txt  window.rs
src/shaders/: hit.wgsl  random.wgsl  raytracer.wgsl  screen.wgsl  types.wgsl
