[package]
name = "testyo"
version = "0.1.0"
edition = "2024"

[dependencies]
glfw = "0.61.0"
wgpu = "28.0.0"
glam = "0.31.0"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
rand = "0.10.0-rc.7"
bytemuck = "1.24.0"
futures = "0.3.31"
pollster = "0.4.0"
indexmap = "2.13.0"
once_cell = "1.21.3"